fixed .fixed being too large

--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -6,13 +6,15 @@ body {
 
 .fixed {
   position: fixed;
-  top: 0%;
+  top: 10%;
   left: 0%;
-  height: 100%;
+  height: 80%;
   width: 100%;
 }
 
 .cover {
+  top: 0% !important;
+  height: 100% !important;
   display: none;
   background-size: cover;
   z-index: 999;
